svirpti/tests/snapshots/simple__check_non_deterministic_choice_encoding2.snap
---
source: svirpti/tests/simple.rs
expression: program
---
sorts: []
axioms: []
functions: []
procedure:
  variables:
    - name: a
      sort: Bool
    - name: b
      sort: Bool
    - name: c
      sort: Bool
  basic_blocks:
    - label: entry
      guard:
        Constant:
          Bool: true
      statements: []
      successors:
        - 1
    - label: bb1
      guard:
        Constant:
          Bool: true
      statements: []
      successors:
        - 2
        - 3
    - label: bb2
      guard:
        Variable:
          name: a
      statements:
        - Assume:
            assertion:
              Variable:
                name: b
            label: l1
      successors:
        - 4
    - label: bb3
      guard:
        Variable:
          name: c
      statements: []
      successors:
        - 4
    - label: bb4
      guard:
        Constant:
          Bool: true
      statements:
        - Assert:
            assertion:
              BinaryOperation:
                kind: Or
                left:
                  BinaryOperation:
                    kind: Implies
                    left:
                      Variable:
                        name: a
                    right:
                      Variable:
                        name: b
                right:
                  Variable:
                    name: c
            label: l3
      successors:
        - 5
    - label: exit
      guard:
        Constant:
          Bool: true
      statements: []
      successors: []
