svirpti/tests/snapshots/simple__check_sequence_encoding.snap
---
source: svirpti/tests/simple.rs
expression: program
---
sorts: []
axioms: []
functions: []
procedure:
  variables:
    - name: a
      sort: Int
  basic_blocks:
    - label: entry
      guard:
        Constant:
          Bool: true
      statements: []
      successors:
        - 1
    - label: bb1
      guard:
        BinaryOperation:
          kind: LtCmp
          left:
            Constant:
              Int: 0
          right:
            Variable:
              name: a
      statements: []
      successors:
        - 2
    - label: bb2
      guard:
        BinaryOperation:
          kind: LtCmp
          left:
            Variable:
              name: a
          right:
            Constant:
              Int: 10
      statements: []
      successors:
        - 3
    - label: bb3
      guard:
        Constant:
          Bool: true
      statements:
        - Assert:
            assertion:
              BinaryOperation:
                kind: And
                left:
                  BinaryOperation:
                    kind: LtCmp
                    left:
                      Constant:
                        Int: 0
                    right:
                      Variable:
                        name: a
                right:
                  BinaryOperation:
                    kind: LtCmp
                    left:
                      Variable:
                        name: a
                    right:
                      Constant:
                        Int: 10
            label: l
      successors:
        - 4
    - label: exit
      guard:
        Constant:
          Bool: true
      statements: []
      successors: []
